--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -112,12 +112,10 @@
   "swap.swapScreen.swapFrom": "Swap from",
   "swap.swapScreen.swapTo": "Swap to",
   "swap.swapScreen.currentBalance": "Current balance",
-  "swap.swapScreen.clear": "CLEAR",
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.selectPool": "Select pool",
-  "swap.swapScreen.swapButton": "SWAP",
   "swap.swapScreen.verifiedBy": "Verified by MuesliSwap",
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
@@ -532,6 +530,7 @@
   "global.buy": "Buy",
   "global.cancel": "Cancel",
   "global.close": "close",
+  "global.clear": "clear",
   "global.comingSoon": "Coming soon",
   "global.currency": "Currency",
   "global.currency.ADA": "Cardano",
