--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 47,
+      "line": 49,
       "column": 13,
-      "index": 1892
+      "index": 2016
     },
     "end": {
-      "line": 50,
+      "line": 52,
       "column": 3,
-      "index": 1965
+      "index": 2089
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 51,
+      "line": 53,
       "column": 13,
-      "index": 1980
+      "index": 2104
     },
     "end": {
-      "line": 54,
+      "line": 56,
       "column": 3,
-      "index": 2062
+      "index": 2186
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 55,
+      "line": 57,
       "column": 13,
-      "index": 2077
+      "index": 2201
     },
     "end": {
-      "line": 58,
+      "line": 60,
       "column": 3,
-      "index": 2156
+      "index": 2280
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 59,
+      "line": 61,
       "column": 16,
-      "index": 2174
+      "index": 2298
     },
     "end": {
-      "line": 62,
+      "line": 64,
       "column": 3,
-      "index": 2259
+      "index": 2383
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 63,
+      "line": 65,
       "column": 15,
-      "index": 2276
+      "index": 2400
     },
     "end": {
-      "line": 66,
+      "line": 68,
       "column": 3,
-      "index": 2352
+      "index": 2476
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 67,
+      "line": 69,
       "column": 12,
-      "index": 2366
+      "index": 2490
     },
     "end": {
-      "line": 70,
+      "line": 72,
       "column": 3,
-      "index": 2443
+      "index": 2567
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 71,
+      "line": 73,
       "column": 10,
-      "index": 2455
+      "index": 2579
     },
     "end": {
-      "line": 74,
+      "line": 76,
       "column": 3,
-      "index": 2528
+      "index": 2652
     }
   },
   {
@@ -109,29 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 75,
+      "line": 77,
       "column": 18,
-      "index": 2548
+      "index": 2672
     },
     "end": {
-      "line": 78,
+      "line": 80,
       "column": 3,
-      "index": 2637
-    }
-  },
-  {
-    "id": "swap.swapScreen.clear",
-    "defaultMessage": "!!!Clear",
-    "file": "src/features/Swap/common/strings.ts",
-    "start": {
-      "line": 79,
-      "column": 9,
-      "index": 2648
-    },
-    "end": {
-      "line": 82,
-      "column": 3,
-      "index": 2718
+      "index": 2761
     }
   },
   {
@@ -139,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 83,
+      "line": 81,
       "column": 15,
-      "index": 2735
+      "index": 2778
     },
     "end": {
-      "line": 86,
+      "line": 84,
       "column": 3,
-      "index": 2818
+      "index": 2861
     }
   },
   {
@@ -154,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 87,
+      "line": 85,
       "column": 15,
-      "index": 2835
+      "index": 2878
     },
     "end": {
-      "line": 90,
+      "line": 88,
       "column": 3,
-      "index": 2918
+      "index": 2961
     }
   },
   {
@@ -169,29 +154,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 91,
+      "line": 89,
       "column": 21,
-      "index": 2941
+      "index": 2984
     },
     "end": {
-      "line": 94,
+      "line": 92,
       "column": 3,
-      "index": 3036
-    }
-  },
-  {
-    "id": "swap.swapScreen.swapButton",
-    "defaultMessage": "!!!Swap",
-    "file": "src/features/Swap/common/strings.ts",
-    "start": {
-      "line": 95,
-      "column": 14,
-      "index": 3052
-    },
-    "end": {
-      "line": 98,
-      "column": 3,
-      "index": 3126
+      "index": 3079
     }
   },
   {
@@ -199,14 +169,14 @@
     "defaultMessage": "!!!Verified by MuesliSwap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 99,
+      "line": 93,
       "column": 14,
-      "index": 3142
+      "index": 3095
     },
     "end": {
-      "line": 102,
+      "line": 96,
       "column": 3,
-      "index": 3234
+      "index": 3187
     }
   },
   {
@@ -214,14 +184,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 103,
+      "line": 97,
       "column": 12,
-      "index": 3248
+      "index": 3201
     },
     "end": {
-      "line": 106,
+      "line": 100,
       "column": 3,
-      "index": 3346
+      "index": 3299
     }
   },
   {
@@ -229,14 +199,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 107,
+      "line": 101,
       "column": 19,
-      "index": 3367
+      "index": 3320
     },
     "end": {
-      "line": 110,
+      "line": 104,
       "column": 3,
-      "index": 3468
+      "index": 3421
     }
   },
   {
@@ -244,14 +214,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 111,
+      "line": 105,
       "column": 16,
-      "index": 3486
+      "index": 3439
     },
     "end": {
-      "line": 114,
+      "line": 108,
       "column": 3,
-      "index": 3623
+      "index": 3576
     }
   },
   {
@@ -259,14 +229,44 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 115,
+      "line": 109,
       "column": 17,
-      "index": 3642
+      "index": 3595
     },
     "end": {
-      "line": 118,
+      "line": 112,
       "column": 3,
-      "index": 3779
+      "index": 3732
+    }
+  },
+  {
+    "id": "swap.swapScreen.openOrders",
+    "defaultMessage": "!!!Open orders",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 113,
+      "column": 14,
+      "index": 3748
+    },
+    "end": {
+      "line": 116,
+      "column": 3,
+      "index": 3829
+    }
+  },
+  {
+    "id": "swap.swapScreen.completedOrders",
+    "defaultMessage": "!!!Completed orders",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 117,
+      "column": 19,
+      "index": 3850
+    },
+    "end": {
+      "line": 120,
+      "column": 3,
+      "index": 3941
     }
   },
   {
@@ -274,14 +274,44 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 119,
+      "line": 121,
       "column": 9,
-      "index": 3790
+      "index": 3952
     },
     "end": {
-      "line": 122,
+      "line": 124,
       "column": 3,
-      "index": 3863
+      "index": 4025
+    }
+  },
+  {
+    "id": "global.clear",
+    "defaultMessage": "!!!Clear",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 125,
+      "column": 9,
+      "index": 4036
+    },
+    "end": {
+      "line": 128,
+      "column": 3,
+      "index": 4097
+    }
+  },
+  {
+    "id": "global.swap",
+    "defaultMessage": "!!!Swap",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 129,
+      "column": 14,
+      "index": 4113
+    },
+    "end": {
+      "line": 132,
+      "column": 3,
+      "index": 4172
     }
   },
   {
@@ -289,14 +319,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 135,
       "column": 11,
-      "index": 3923
+      "index": 4232
     },
     "end": {
-      "line": 128,
+      "line": 138,
       "column": 3,
-      "index": 4018
+      "index": 4327
     }
   },
   {
@@ -304,14 +334,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 139,
       "column": 12,
-      "index": 4032
+      "index": 4341
     },
     "end": {
-      "line": 132,
+      "line": 142,
       "column": 3,
-      "index": 4135
+      "index": 4444
     }
   },
   {
@@ -319,14 +349,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 143,
       "column": 9,
-      "index": 4146
+      "index": 4455
     },
     "end": {
-      "line": 136,
+      "line": 146,
       "column": 3,
-      "index": 4236
+      "index": 4545
     }
   },
   {
@@ -334,14 +364,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 147,
       "column": 16,
-      "index": 4254
+      "index": 4563
     },
     "end": {
-      "line": 140,
+      "line": 150,
       "column": 3,
-      "index": 4350
+      "index": 4659
     }
   },
   {
@@ -349,14 +379,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 151,
       "column": 20,
-      "index": 4372
+      "index": 4681
     },
     "end": {
-      "line": 144,
+      "line": 154,
       "column": 3,
-      "index": 4461
+      "index": 4770
     }
   }
 ]
